force-app/main/default/objects/Case/fields/Negotiation_Timeout_End__c.field-meta.xml
<CustomField>
    <fullName>Negotiation_Timeout_End__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Negotiation Timeout End</label>
    <type>Checkbox</type>
</CustomField>