force-app/main/default/objects/Case/fields/Payment_Obligation_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Payment_Obligation_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Obligation Email Sent</label>
    <type>Checkbox</type>
</CustomField>