force-app/main/default/objects/Case/fields/Protocol__c.field-meta.xml
<CustomField>
    <fullName>Protocol__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Protocol</label>
    <referenceTo>Protocol__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>