force-app/main/default/objects/Case/fields/Provisional_Actual_Merit__c.field-meta.xml
<CustomField>
    <fullName>Provisional_Actual_Merit__c</fullName>
    <description>Provisional / actual merit</description>
    <label>Provisional / Actual Merit</label>
    <summarizedField>Merit__c.Provisional_Actual_Merit__c</summarizedField>
    <summaryForeignKey>Merit__c.Related_Case__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>