force-app/main/default/objects/Case/fields/Provisional_Actual_Value__c.field-meta.xml
<CustomField>
    <fullName>Provisional_Actual_Value__c</fullName>
    <description>Provisional / actual value of damages</description>
    <label>Provisional / Actual Value</label>
    <summarizedField>Loss_Category__c.Provisional_Actual_Value__c</summarizedField>
    <summaryForeignKey>Loss_Category__c.Case__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>