force-app/main/default/objects/Case/fields/Reason_for_Declining_Arbitration__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Declining_Arbitration__c</fullName>
    <label>Reason for Declining Arbitration</label>
    <type>TextArea</type>
</CustomField>