force-app/main/default/objects/Case/fields/Refer_to_Arbitration_Count__c.field-meta.xml
<CustomField>
    <fullName>Refer_to_Arbitration_Count__c</fullName>
    <label>Neg-Neg-8-Refer to Arbitration Count</label>
    <summaryFilterItems>
        <field>Loss_Category__c.Refer_to_Arbitration_Count__c</field>
        <operation>greaterOrEqual</operation>
        <value>1</value>
    </summaryFilterItems>
    <summaryForeignKey>Loss_Category__c.Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>