force-app/main/default/objects/Case/fields/Settled_Status_Count__c.field-meta.xml
<CustomField>
    <fullName>Settled_Status_Count__c</fullName>
    <label>Neg-PS-2-Settled Status Count</label>
    <summarizedField>Loss_Category__c.Settled_Status_Count__c</summarizedField>
    <summaryForeignKey>Loss_Category__c.Case__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>