force-app/main/default/objects/Case/fields/Settlement_Negotiation_Status_Count__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Negotiation_Status_Count__c</fullName>
    <label>Neg-PS-1-Settlement Neg Status Count</label>
    <summarizedField>Loss_Category__c.Negotiation_Status_Count__c</summarizedField>
    <summaryForeignKey>Loss_Category__c.Case__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>