force-app/main/default/objects/Case/fields/Settlement_Validation__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Settlement Validation</label>
    <type>Checkbox</type>
</CustomField>