force-app/main/default/objects/Case/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Registration</fullName>
                <default>true</default>
                <label>Registration</label>
            </value>
            <value>
                <fullName>Negotiation</fullName>
            </value>
            <value>
                <fullName>Finalize</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Arbitrating</fullName>
                <isActive>false</isActive>
                <label>Arbitrating</label>
            </value>
            <value>
                <fullName>Closed Awarded</fullName>
                <isActive>false</isActive>
                <label>Closed Awarded</label>
            </value>
            <value>
                <fullName>Pending</fullName>
                <isActive>false</isActive>
                <label>Pending</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>