force-app/main/default/objects/Case/fields/Status_Pending_Acceptance_Date__c.field-meta.xml
<CustomField>
    <fullName>Status_Pending_Acceptance_Date__c</fullName>
    <description>Time and Date updates when the case status has been updated to Pending Acceptance</description>
    <label>Status Pending Acceptance Date</label>
    <type>DateTime</type>
</CustomField>