force-app/main/default/objects/Case/fields/Status_Referred_Date__c.field-meta.xml
<CustomField>
    <fullName>Status_Referred_Date__c</fullName>
    <description>Date and Time when status was changed to Referred</description>
    <label>Status Referred Date</label>
    <type>DateTime</type>
</CustomField>