force-app/main/default/objects/Case/fields/Status_Referred_End_Date_del__c.field-meta.xml
<CustomField>
    <fullName>Status_Referred_End_Date_del__c</fullName>
    <formula>IF(ISPICKVAL(Status, &quot;Pending Acceptance&quot;),NOW(),NULL)</formula>
    <label>Status Referred End Date</label>
    <type>DateTime</type>
</CustomField>