force-app/main/default/objects/Case/fields/Submit_Arbitration_Rewards__c.field-meta.xml
<CustomField>
    <fullName>Submit_Arbitration_Rewards__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submit Arbitral Award</label>
    <type>Checkbox</type>
</CustomField>