force-app/main/default/objects/Case/fields/Submit_Case__c.field-meta.xml
<CustomField>
    <fullName>Submit_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submit Case</label>
    <type>Checkbox</type>
</CustomField>