force-app/main/default/objects/Case/fields/Submit_Schedule_of_Losses_Defendant__c.field-meta.xml
<CustomField>
    <fullName>Submit_Schedule_of_Losses_Defendant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submit Schedule of Losses- Defendant</label>
    <type>Checkbox</type>
</CustomField>