force-app/main/default/objects/Case/fields/TODAY_del1_del__c.field-meta.xml
<CustomField>
    <fullName>TODAY_del1_del__c</fullName>
    <label>TODAY</label>
    <type>DateTime</type>
</CustomField>