force-app/main/default/objects/Case/fields/Total_Case_Damages__c.field-meta.xml
<CustomField>
    <fullName>Total_Case_Damages__c</fullName>
    <description>Used for validation rule on CAP amounts. Quantum Rules</description>
    <label>Finalisation-PS-1-Total Case Damages</label>
    <summarizedField>Loss_Category__c.Total_Claimant_Position__c</summarizedField>
    <summaryForeignKey>Loss_Category__c.Case__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>