force-app/main/default/objects/Case/fields/Total_Claimant_Position__c.field-meta.xml
<CustomField>
    <fullName>Total_Claimant_Position__c</fullName>
    <label>Neg-Neg-2-Total Claimant Position</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>