force-app/main/default/objects/Case/fields/Total_Damages_Claimant_Position__c.field-meta.xml
<CustomField>
    <fullName>Total_Damages_Claimant_Position__c</fullName>
    <formula>Total_Obligation__c * Merit_Claimant_Position__c</formula>
    <label>Total Damages Claimant Position</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>