force-app/main/default/objects/Case/fields/Total_Loss_Item_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Loss_Item_Count__c</fullName>
    <label>Neg-Neg-1-Total Loss Item Count</label>
    <summarizedField>Loss_Category__c.Loss_Item_Count__c</summarizedField>
    <summaryForeignKey>Loss_Category__c.Case__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>