force-app/main/default/objects/Case/fields/Total_Obligation__c.field-meta.xml
<CustomField>
    <fullName>Total_Obligation__c</fullName>
    <label>Neg-Settlement-1-Total Obligation</label>
    <summarizedField>Loss_Category__c.Total_Claimant_Position__c</summarizedField>
    <summaryForeignKey>Loss_Category__c.Case__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>