force-app/main/default/objects/Case/recordTypes/Personal_Injury_Employment_Liability_End_to_End.recordType-meta.xml
<RecordType>
    <fullName>Personal_Injury_Employment_Liability_End_to_End</fullName>
    <active>true</active>
    <businessProcess>Process 1</businessProcess>
    <label>Personal Injury - Employment Liability - End-to-End</label>
</RecordType>