force-app/main/default/objects/Case/recordTypes/Personal_Injury_Motor_Vehicle_End_to_End_2.recordType-meta.xml
<RecordType>
    <fullName>Personal_Injury_Motor_Vehicle_End_to_End_2</fullName>
    <active>true</active>
    <businessProcess>Process 1</businessProcess>
    <label>Personal Injury - Motor Vehicle End to End 2</label>
</RecordType>