force-app/main/default/objects/Case/recordTypes/PersonalInjuryMotorVehicleArbitrationOnly.recordType-meta.xml
<RecordType>
    <fullName>PersonalInjuryMotorVehicleArbitrationOnly</fullName>
    <active>true</active>
    <businessProcess>Support Process Arbitration</businessProcess>
    <description>Case Type 2</description>
    <label>Personal Injury - Motor Vehicle - Arbitration Only</label>
</RecordType>