force-app/main/default/objects/Case/recordTypes/PersonalInjuryMotorVehicleEndtoEnd_1.recordType-meta.xml
<RecordType>
    <fullName>PersonalInjuryMotorVehicleEndtoEnd_1</fullName>
    <active>true</active>
    <businessProcess>Process 1</businessProcess>
    <description>Case Type 1</description>
    <label>Personal Injury - Motor Vehicle - End-to-End</label>
</RecordType>