force-app/main/default/objects/Case/validationRules/Cannot_update_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_update_Status</fullName>
    <active>false</active>
    <description>Workaround to prevent users updating the status field..... tbc</description>
    <errorConditionFormula>ISCHANGED( Status ) &amp;&amp;   $Profile.Name = &apos;System Administrator&apos;</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>you cannot update this field</errorMessage>
</ValidationRule>