force-app/main/default/objects/Case/validationRules/Claimant_and_Defendant_Not_same.validationRule-meta.xml
<ValidationRule>
    <fullName>Claimant_and_Defendant_Not_same</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ClaimantFirm__c =  Defendant_Firm__c,  
ISBLANK(ClaimantFirm__c) = false,
ISBLANK(Defendant_Firm__c)=false 
)</errorConditionFormula>
    <errorMessage>The Claimant and the Defendant firm cannot be the same firm.</errorMessage>
</ValidationRule>