force-app/main/default/objects/Case/validationRules/Neg_Arbitrating_1_ArbDeclineReaso.validationRule-meta.xml
<ValidationRule>
    <fullName>Neg_Arbitrating_1_ArbDeclineReaso</fullName>
    <active>true</active>
    <description>Requests a reason for declining arbitration from the Arbitrator Firm</description>
    <errorConditionFormula>TEXT(Arbitrator_Accept_Decline__c) = &quot; Decline&quot;
&amp;&amp;  Reason_for_Declining_Arbitration__c = &quot;&quot;</errorConditionFormula>
    <errorDisplayField>Reason_for_Declining_Arbitration__c</errorDisplayField>
    <errorMessage>Please provide a reason for declining</errorMessage>
</ValidationRule>