force-app/main/default/objects/Case/validationRules/Neg_Neg_4_AO_Cap_on_Quantum.validationRule-meta.xml
<ValidationRule>
    <fullName>Neg_Neg_4_AO_Cap_on_Quantum</fullName>
    <active>false</active>
    <description>A cap of GBP 25,000 on the entire case damages.</description>
    <errorConditionFormula>AND(CONTAINS( Protocol__r.Case_Protocol__c , &apos;Case Arbribtration&apos;) ,  Total_Obligation__c &gt;  Protocol__r.Cap_on_Amount__c)</errorConditionFormula>
    <errorMessage>Your total cannot exceed GBP 25,000</errorMessage>
</ValidationRule>