force-app/main/default/objects/Case/validationRules/Neg_Neg_5_Cap_on_Quantum.validationRule-meta.xml
<ValidationRule>
    <fullName>Neg_Neg_5_Cap_on_Quantum</fullName>
    <active>true</active>
    <description>A cap of GBP 40,000 on entire case damages.</description>
    <errorConditionFormula>Total_Case_Damages__c &gt;=  Protocol__r.Cap_on_Amount__c</errorConditionFormula>
    <errorMessage>Your total damages claim cannot exceed GBP 40,000.</errorMessage>
</ValidationRule>