force-app/main/default/objects/Case/validationRules/Reg_Created_1_Agree_to_Arbitration_C.validationRule-meta.xml
<ValidationRule>
    <fullName>Reg_Created_1_Agree_to_Arbitration_C</fullName>
    <active>false</active>
    <description>If the Claimant firm has been added, please confirm agreement to abitration.</description>
    <errorConditionFormula>AND(  Claimant_Firm_Team__c  &lt;&gt; &quot;&quot;,  Agree_to_Arbitration_Process__c = False)</errorConditionFormula>
    <errorDisplayField>Agree_to_Arbitration_Process__c</errorDisplayField>
    <errorMessage>Please agree to arbitration process as the claimant firm</errorMessage>
</ValidationRule>