force-app/main/default/objects/Case/validationRules/Reg_Referred_2_Cannot_Refer_EE_Endmsm.validationRule-meta.xml
<ValidationRule>
    <fullName>Reg_Referred_2_Cannot_Refer_EE_Endmsm</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Merit_Minimum_Requirements__c = False , TEXT(Status) = &apos;Referred&apos;)</errorConditionFormula>
    <errorMessage>You cannot refer this case.  Please enter a claimant position on the Merit</errorMessage>
</ValidationRule>