force-app/main/default/objects/Case/validationRules/Reg_Referred_3_Cannot_Refer_PI_MV_AO.validationRule-meta.xml
<ValidationRule>
    <fullName>Reg_Referred_3_Cannot_Refer_PI_MV_AO</fullName>
    <active>false</active>
    <errorConditionFormula>AND(  Defendant_Information__r.Defendant_First_Name__c  = NULL, 
 Defendant_Information__r.Defendant_Last_Name__c  = NULL,  Defendant_Information__r.Defendant_Date_of_Birth__c = NULL, Protocol__r.Code__c = &apos;PI-MV-AO&apos;)</errorConditionFormula>
    <errorMessage>Please complete the minimum defendant information required.</errorMessage>
</ValidationRule>