force-app/main/default/objects/Case/validationRules/Reg_Referred_3_Cannot_Refer_PI_PL_EE.validationRule-meta.xml
<ValidationRule>
    <fullName>Reg_Referred_3_Cannot_Refer_PI_PL_EE</fullName>
    <active>false</active>
    <errorConditionFormula>AND(   Defendant_Information__r.Company_Employer_Name__c   = NULL, 
 Protocol__r.Code__c = &apos;PI-PL-EE&apos;)</errorConditionFormula>
    <errorMessage>Please complete the minimum defendant information required.</errorMessage>
</ValidationRule>