force-app/main/default/objects/Case/validationRules/Settlement_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Settlement_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Settlement_Validation__c = true</errorConditionFormula>
    <errorDisplayField>Claimant_Confirms_Case_Settled__c</errorDisplayField>
    <errorMessage>You can&apos;t hold or settle a case if some items are still in negotiation or arbitrated</errorMessage>
</ValidationRule>