force-app/main/default/objects/Case/validationRules/Submit_Arbitration_Rewards.validationRule-meta.xml
<ValidationRule>
    <fullName>Submit_Arbitration_Rewards</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Arbitration_Negotiation_Count__c &gt;0, Submit_Arbitration_Rewards__c )</errorConditionFormula>
    <errorDisplayField>Submit_Arbitration_Rewards__c</errorDisplayField>
    <errorMessage>There are still outstanding Arbitration items</errorMessage>
</ValidationRule>