force-app/main/default/objects/Case/listViews/All_Cases.listView-meta.xml
<ListView>
    <fullName>All_Cases</fullName>
    <columns>Stage__c</columns>
    <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
    <columns>Closed_Date__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>ClaimantFirm__c</columns>
    <columns>Defendant_Firm__c</columns>
    <columns>Facilitator_Contact__c</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Provisional_Actual_Merit__c</columns>
    <columns>Provisional_Actual_Value__c</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <filterScope>Everything</filterScope>
    <label>All Cases</label>
</ListView>