force-app/main/default/objects/Case/listViews/All_Closed_Cases.listView-meta.xml
<ListView>
    <fullName>All_Closed_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>ClaimantFirm__c</columns>
    <columns>Defendant_Firm__c</columns>
    <columns>Incident_Information__c</columns>
    <columns>CASES.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Closed</value>
    </filters>
    <label>All Closed Cases</label>
</ListView>