force-app/main/default/objects/Case/listViews/Facilitators.listView-meta.xml
<ListView>
    <fullName>Facilitators</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.STATUS</columns>
    <columns>Facilitator_Firm__c</columns>
    <columns>Facilitator_Contact__c</columns>
    <columns>Facilitator_Email__c</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Facilitator_Email__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Facilitators</label>
</ListView>