force-app/main/default/objects/Case/listViews/My_Team_Cases.listView-meta.xml
<ListView>
    <fullName>My_Team_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>Closed_Date__c</columns>
    <columns>ClaimantFirm__c</columns>
    <columns>Defendant_Firm__c</columns>
    <filterScope>Team</filterScope>
    <label>My Team Cases</label>
</ListView>