force-app/main/default/objects/Case/listViews/New_Cases_Today.listView-meta.xml
<ListView>
    <fullName>New_Cases_Today</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.RECORDTYPE</columns>
    <columns>CASES.STATUS</columns>
    <columns>Stage__c</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>ClaimantFirm__c</columns>
    <columns>Defendant_Firm__c</columns>
    <columns>Incident_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER.ALIAS</field>
        <operation>equals</operation>
        <value>Lynette</value>
    </filters>
    <filters>
        <field>CASES.CREATED_DATE_DATE_ONLY</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>CASES.ORIGIN</field>
        <operation>equals</operation>
        <value>Bulk Upload</value>
    </filters>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.PersonalInjuryMotorVehicleArbitrationOnly</value>
    </filters>
    <label>Manual Case Upload</label>
</ListView>